--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,4 @@
+setuptools>=67.0
 absl-py==2.1.0
 aiofiles==24.1.0
 aiogram==3.18.0
@@ -24,8 +25,6 @@ jiter==0.9.0
 kiwisolver==1.4.8
 magic-filter==1.0.12
 matplotlib==3.10.1
-mediapipe-rpi4==0.8.8
-multidict==6.1.0
 numpy==2.2.3
 openai==1.66.3
 packaging==24.2
@@ -46,6 +45,6 @@ urllib3==2.3.0
 websockets==15.0.1
 wheel==0.45.1
 yarl==1.18.3
-python-telegram-bot
+python-telegram-bot==20.7
 flask
 gunicorn
