--- a/requirements.txt
+++ b/requirements.txt
@@ -45,6 +45,6 @@ urllib3==2.3.0
 websockets==15.0.1
 wheel==0.45.1
 yarl==1.18.3
-python-telegram-bot==20.7
-flask[async]==3.1.0
+Flask[async]
+python-telegram-bot
 gunicorn
