--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,4 @@
 aiogram==3.0.0
 fastapi==0.100.0
 uvicorn==0.23.2
-openai==1.7.2
-elevenlabs==1.54.0
-gtts==2.3.2  # Якщо використовуєш Google Text-to-Speech
+gtts==2.3.2
